Implement different dtbo for SKU and PCB detection
This commit introduces a board_late_init function to perform SKU and PCB identification in U-Boot.

The function reads and decodes SKU and PCB IDs from specified registers, and sets the 'boot_conf' environment variable accordingly.

The SKU ID is also used to determine the appropriate Device Tree Overlay to load during the boot process.

Additionally, specific bits in the PCB_PUPD_REG register are cleared as required.

Detailed changes:

1. Read and parse SKU ID, print the corresponding string, and set the 'boot_conf' environment variable.
2. Set bits at PCB_PUPD_REG address to zero.
3. Read and parse PCB ID, and print the corresponding string.

--- a/configs/lec_mtk_i1200_ufs_defconfig
+++ b/configs/lec_mtk_i1200_ufs_defconfig
@@ -21,6 +21,7 @@ CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_DEFAULT_FDT_FILE="lec-mtk-i1200"
 # CONFIG_DISPLAY_BOARDINFO is not set
+CONFIG_BOARD_LATE_INIT=y
 CONFIG_HUSH_PARSER=y
 # CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONSOLE is not set
