--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -1241,7 +1241,11 @@ dtb-$(CONFIG_ARCH_MEDIATEK) += \
 	mt8512-bm1-emmc.dtb \
 	mt8516-pumpkin.dtb \
 	mt8518-ap1-emmc.dtb \
-	genio-700-evk.dtb
+	genio-350-evk.dtb \
+	genio-510-evk.dtb \
+	genio-700-evk.dtb \
+	genio-1200-evk.dtb \
+	genio-1200-evk-ufs.dtb
 
 dtb-$(CONFIG_ARCH_NPCM7xx) += nuvoton-npcm750-evb.dtb
 dtb-$(CONFIG_XEN) += xenguest-arm64.dtb
