--- a/arch/arm/dts/genio-350-evk.dts
+++ b/arch/arm/dts/genio-350-evk.dts
@@ -11,17 +11,22 @@
 #include "mt6357.dtsi"
 
 / {
-	model = "MediaTek MT8365 Open Platform EVK";
-	compatible = "mediatek,mt8365-evk", "mediatek,mt8365";
+	model = "MediaTek Genio-350 EVK";
+	compatible = "mediatek,genio-350-evk", "mediatek,mt8365";
 
 	memory@40000000 {
 		device_type = "memory";
-		reg = <0 0x40000000 0 0x40000000>;
+		reg = <0 0x40000000 0 0xC0000000>;
 	};
 
 	firmware: firmware {
 		optee {
 			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
+
+		psci: psci {
+			compatible = "arm,psci-1.0";
 			method = "smc";
 		};
 	};
@@ -92,6 +97,13 @@
 	status = "okay";
 };
 
+&i2c0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c0_pins_default>;
+	clock-frequency = <100000>;
+	status = "okay";
+};
+
 &i2c1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&i2c1_pins_default>;
@@ -103,11 +115,18 @@
 		reg = <0x4c>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&ite_pins_default>;
-		vcn33-supply = <&mt6357_vibr_reg>;
-		vcn18-supply = <&mt6357_vsim2_reg>;
+		vcn33-supply = <&mt6357_vcn33_bt_reg>;
+		vcn18-supply = <&mt6357_vcn18_reg>;
 		vrf12-supply = <&mt6357_vrf12_reg>;
 		reset-gpios = <&gpio 69 GPIO_ACTIVE_LOW>;
 	};
+};
+
+&i2c2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c2_pins_default>;
+	clock-frequency = <100000>;
+	status = "okay";
 };
 
 &pio {
@@ -121,9 +140,19 @@
 		groups =  "dpi_sleep";
 	};
 
+	i2c0_pins_default: i2c0_pins_default {
+		function = "i2c";
+		groups = "i2c0";
+	};
+
 	i2c1_pins_default: i2c1_pins_default {
 		function = "i2c";
 		groups = "i2c1";
+	};
+
+	i2c2_pins_default: i2c2_pins_default {
+		function = "i2c";
+		groups = "i2c2";
 	};
 
 	ite_pins_default: ite_pins_default {
