--- a/arch/arm/dts/mt8195-demo.dts
+++ b/arch/arm/dts/mt8195-demo.dts
@@ -14,13 +14,19 @@
 	compatible = "mediatek,mt8195-demo", "mediatek,mt8195";
 
 	memory@40000000 {
+		/* 8GB */
 		device_type = "memory";
-		reg = <0 0x40000000 0 0x80000000>;
+		reg = <0 0x40000000 2 0x00000000>;
 	};
 
 	firmware: firmware {
 		optee {
 			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
+
+		psci: psci {
+			compatible = "arm,psci-1.0";
 			method = "smc";
 		};
 	};
@@ -74,6 +80,117 @@
 	};
 };
 
+&pio {
+	i2c0_pins: i2c0 {
+		pinmux = <PINMUX_GPIO8__FUNC_SDA0>,
+			 <PINMUX_GPIO9__FUNC_SCL0>;
+		input-enable;
+		bias-pull-up;
+	};
+
+	i2c1_pins: i2c1 {
+		pinmux = <PINMUX_GPIO10__FUNC_SDA1>,
+			 <PINMUX_GPIO11__FUNC_SCL1>;
+		input-enable;
+		bias-pull-up;
+	};
+
+	i2c2_pins: i2c2 {
+		pinmux = <PINMUX_GPIO12__FUNC_SDA2>,
+			 <PINMUX_GPIO13__FUNC_SCL2>;
+		input-enable;
+		bias-pull-up;
+	};
+
+	i2c3_pins: i2c3 {
+		pinmux = <PINMUX_GPIO14__FUNC_SDA3>,
+			 <PINMUX_GPIO15__FUNC_SCL3>;
+		input-enable;
+		bias-pull-up;
+	};
+
+	i2c6_pins: i2c6 {
+		pinmux = <PINMUX_GPIO25__FUNC_SDA6>,
+			 <PINMUX_GPIO26__FUNC_SCL6>;
+		input-enable;
+		bias-pull-up;
+	};
+
+	ethdefault: ethdefault {
+		txdpins {
+			pinmux = <PINMUX_GPIO77__FUNC_GBE_TXD3>,
+				 <PINMUX_GPIO78__FUNC_GBE_TXD2>,
+				 <PINMUX_GPIO79__FUNC_GBE_TXD1>,
+				 <PINMUX_GPIO80__FUNC_GBE_TXD0>;
+			drive-strength = <MTK_DRIVE_8mA>;
+		};
+		ccpins {
+			pinmux = <PINMUX_GPIO85__FUNC_GBE_TXC>,
+				 <PINMUX_GPIO88__FUNC_GBE_TXEN>,
+				 <PINMUX_GPIO87__FUNC_GBE_RXDV>,
+				 <PINMUX_GPIO86__FUNC_GBE_RXC>;
+			drive-strength = <MTK_DRIVE_8mA>;
+		};
+		rxdpins {
+			pinmux = <PINMUX_GPIO81__FUNC_GBE_RXD3>,
+				 <PINMUX_GPIO82__FUNC_GBE_RXD2>,
+				 <PINMUX_GPIO83__FUNC_GBE_RXD1>,
+				 <PINMUX_GPIO84__FUNC_GBE_RXD0>;
+		};
+		mdiopins {
+			pinmux = <PINMUX_GPIO89__FUNC_GBE_MDC>,
+				 <PINMUX_GPIO90__FUNC_GBE_MDIO>;
+			input-enable;
+		};
+		powerpins {
+			pinmux = <PINMUX_GPIO91__FUNC_GPIO91>,
+				 <PINMUX_GPIO92__FUNC_GPIO92>;
+			output-high;
+		};
+		phyresetpin {
+			pinmux = <PINMUX_GPIO93__FUNC_GPIO93>;
+		};
+	};
+
+	ethsleep: ethsleep {
+		txdpins {
+			pinmux = <PINMUX_GPIO77__FUNC_GPIO77>,
+				 <PINMUX_GPIO78__FUNC_GPIO78>,
+				 <PINMUX_GPIO79__FUNC_GPIO79>,
+				 <PINMUX_GPIO80__FUNC_GPIO80>;
+		};
+		ccpins {
+			pinmux = <PINMUX_GPIO85__FUNC_GPIO85>,
+				 <PINMUX_GPIO88__FUNC_GPIO88>,
+				 <PINMUX_GPIO87__FUNC_GPIO87>,
+				 <PINMUX_GPIO86__FUNC_GPIO86>;
+		};
+		rxdpins {
+			pinmux = <PINMUX_GPIO81__FUNC_GPIO81>,
+				 <PINMUX_GPIO82__FUNC_GPIO82>,
+				 <PINMUX_GPIO83__FUNC_GPIO83>,
+				 <PINMUX_GPIO84__FUNC_GPIO84>;
+		};
+		mdiopins {
+			pinmux = <PINMUX_GPIO89__FUNC_GPIO89>,
+				 <PINMUX_GPIO90__FUNC_GPIO90>;
+			input-disable;
+			bias-disable;
+		};
+		powerpins {
+			pinmux = <PINMUX_GPIO91__FUNC_GPIO91>,
+				 <PINMUX_GPIO92__FUNC_GPIO92>;
+			input-disable;
+			bias-disable;
+		};
+		phyresetpin {
+			pinmux = <PINMUX_GPIO93__FUNC_GPIO93>;
+			input-disable;
+			bias-disable;
+		};
+	};
+};
+
 &watchdog {
 	status = "okay";
 };
@@ -83,10 +200,12 @@
 };
 
 &mmc0 {
-	bus-width = <4>;
+	bus-width = <8>;
 	max-frequency = <200000000>;
 	cap-mmc-highspeed;
 	mmc-hs200-1_8v;
+	mmc-hs400-1_8v;
+	hs400-ds-delay = <0x14c11>;
 	cap-mmc-hw-reset;
 	vmmc-supply = <&reg_3p3v>;
 	vqmmc-supply = <&reg_1p8v>;
@@ -111,4 +230,60 @@
 
 &xhci3 {
 	status = "okay";
+};
+
+&i2c0 {
+	clock-frequency = <100000>;
+	pinctrl-0 = <&i2c0_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&i2c1 {
+	clock-frequency = <100000>;
+	pinctrl-0 = <&i2c1_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&i2c2 {
+	clock-frequency = <100000>;
+	pinctrl-0 = <&i2c2_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&i2c3 {
+	clock-frequency = <100000>;
+	pinctrl-0 = <&i2c3_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&i2c6 {
+	clock-frequency = <100000>;
+	pinctrl-0 = <&i2c6_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&eth {
+	phy-mode ="rgmii-rxid";
+	phy-handle = <&ethphy0>;
+	mediatek,tx-delay-ps = <2030>;
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&ethdefault>;
+	pinctrl-1 = <&ethsleep>;
+	mac-address = [00 55 7b b5 7d f7];
+	status = "disabled";
+
+	mdio {
+		compatible = "snps,dwmac-mdio";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		ethphy0: ethphy0@1 {
+			compatible = "ethernet-phy-id001c.c916";
+			reg = <0x1>;
+		};
+	};
 };
