--- a/arch/arm/dts/mt8365-pumpkin.dts
+++ b/arch/arm/dts/mt8365-pumpkin.dts
@@ -16,12 +16,17 @@
 
 	memory@40000000 {
 		device_type = "memory";
-		reg = <0 0x40000000 0 0x40000000>;
+		reg = <0 0x40000000 0 0xC0000000>;
 	};
 
 	firmware: firmware {
 		optee {
 			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
+
+		psci: psci {
+			compatible = "arm,psci-1.0";
 			method = "smc";
 		};
 	};
