--- a/arch/arm/mach-mediatek/Kconfig
+++ b/arch/arm/mach-mediatek/Kconfig
@@ -80,6 +80,15 @@ config TARGET_MT8365
 	  It is including UART, SPI, USB2.0 dual role, SD and MMC cards, NAND, PWM,
 	  I2C, I2S, S/PDIF, and several LPDDR3 and LPDDR4 options.
 
+config TARGET_MT8370
+	bool "MediaTek MT8370 SoC"
+	select ARM64
+	help
+	  The MediaTek MT8370 is a ARM64-based SoC with a dual-core Cortex-A78 and
+	  a quad-core Cortex-A55. It is including UART, SPI, USB3.0 dual role,
+	  SD and MMC cards, UFS, PWM, I2C, I2S, S/PDIF, and several LPDDR4
+	  and LPDDR4x options.
+
 config TARGET_MT8512
         bool "MediaTek MT8512 M1 Board"
         select ARM64
@@ -120,6 +129,7 @@ config SYS_BOARD
 	default "mt8195" if TARGET_MT8195
 	default "lec_mtk_i1200" if TARGET_LEC_MTK_I1200
 	default "mt8365" if TARGET_MT8365
+	default "mt8370" if TARGET_MT8370
 	default "mt8512" if TARGET_MT8512
 	default "mt8516" if TARGET_MT8516
 	default "mt8518" if TARGET_MT8518
@@ -139,6 +149,7 @@ config SYS_CONFIG_NAME
 	default "mt8195" if TARGET_MT8195
 	default "lec_mtk_i1200" if TARGET_LEC_MTK_I1200
 	default "mt8365" if TARGET_MT8365
+	default "mt8370" if TARGET_MT8370
 	default "mt8512" if TARGET_MT8512
 	default "mt8516" if TARGET_MT8516
 	default "mt8518" if TARGET_MT8518
@@ -151,7 +162,8 @@ config SYS_CONFIG_NAME
 config MTK_BROM_HEADER_INFO
 	string
 	default "media=nor" if TARGET_MT8518 || TARGET_MT8512 || TARGET_MT7629 || TARGET_MT7622
-	default "media=emmc" if TARGET_MT8516 || TARGET_MT8365 || TARGET_MT8183 || TARGET_MT8195 || TARGET_MT8188 || TARGET_LEC_MTK_I1200
+	default "media=emmc" if TARGET_MT8516 || TARGET_MT8365 || TARGET_MT8183 || TARGET_MT8195 \
+		|| TARGET_MT8188 || TARGET_MT8370 || TARGET_LEC_MTK_I1200
 	default "lk=1" if TARGET_MT7623
 
 config SERIAL_ANDROID
